changed full stop to exclaimation mark

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <footer class="footer">
     <div class="footer__inner">
       <div class="contact">
-        <div class="contact__title">Work inquiry, question or something else? <br/>Email me at <span style="color: #000">hello &lt;at&gt; walsh &lt;dot&gt; dev</span>.</div>
+        <div class="contact__title">Work inquiry, question or something else? <br/>Email me at <span style="color: #000">hello &lt;at&gt; walsh &lt;dot&gt; dev</span>!</div>
         <ul class="contact__list list-reset">
           {% for contact in site.contact %}
           <li class="contact__item">
