--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,11 @@
 
     <div class="logo">
       <a class="logo__link" href="{{ site.baseurl }}/">
-      {%if site.logo %}
+        {%if site.logo %}
         <img class="logo__image" src="{{ site.baseurl }}/assets/img/{{ site.logo }}" alt="{{ site.title }}">
-      {% else %}
+        {% else %}
         {{ site.author.name }}
-      {% endif %}
+        {% endif %}
       </a>
     </div>
 
@@ -22,15 +22,15 @@
           <li class="nav__item">
             <a href="{{site.baseurl}}/" class="nav__link">Home</a>
           </li>
-<!--           UNCOMMENT AND ADD A PAGE IN _pages -->
-          {% for page in site.pages %} 
-            {% unless page.name == 'tags.html' or page.name == '404.html' %}
+          <!--           UNCOMMENT AND ADD A PAGE IN _pages -->
+          {% for page in site.pages %}
+          {% unless page.name == 'tags.html' or page.name == '404.html' or page.donotshowinmenu %}
           {% if page.title %}
           <li class="nav__item">
             <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
           </li>
           {% endif %}
-            {% endunless %}
+          {% endunless %}
           {% endfor %}
         </ul>
 
