--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <header class="header">
 
     <div class="logo">
-      <a class="logo__link" href="{{ site.baseurl }}/">
+      <a class="logo__link" href="{{baseurl}}/">
         {%if site.logo %}
-        <img class="logo__image" src="{{ site.baseurl }}/assets/img/{{ site.logo }}" alt="{{ site.title }}">
+        <img class="logo__image" src="{{baseurl}}/assets/img/{{ site.logo }}" alt="{{ site.title }}">
         {% else %}
         {{ site.author.name }}
         {% endif %}
@@ -20,14 +20,14 @@
 
         <ul class="nav__list list-reset">
           <li class="nav__item">
-            <a href="{{site.baseurl}}/" class="nav__link">Home</a>
+            <a href="{{baseurl}}/" class="nav__link">Home</a>
           </li>
           <!--           UNCOMMENT AND ADD A PAGE IN _pages -->
           {% for page in site.pages %}
           {% unless page.name == 'tags.html' or page.name == '404.html' or page.donotshowinmenu %}
           {% if page.title %}
           <li class="nav__item">
-            <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
+            <a href="{{ page.url | prepend:baseurl}}" class="nav__link">{{ page.title }}</a>
           </li>
           {% endif %}
           {% endunless %}
