--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,10 @@
   {% include footer.html %}
 
   <!-- begin js -->
-  <script src="{{ site.baseurl }}/assets/js/vendors/jquery-3.3.1.min.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/vendors/aos.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/vendors/jquery.fitvids.js"></script>
-  <script src="{{ site.baseurl }}/assets/js/common.js"></script>
+  <script src="{{ baseurl }}/assets/js/vendors/jquery-3.3.1.min.js"></script>
+  <script src="{{ baseurl }}/assets/js/vendors/aos.js"></script>
+  <script src="{{ baseurl }}/assets/js/vendors/jquery.fitvids.js"></script>
+  <script src="{{ baseurl }}/assets/js/common.js"></script>
   <!-- end js -->
 </body>
 
